--- a/Realtime-Messaging/public/index.html
+++ b/Realtime-Messaging/public/index.html
@@ -3,23 +3,40 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Socket.IO</title>
-    <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
+    <h1>Realtime Connection</h1>
+
+    <input type="text" id="message" placeholder="Enter message">
+    <button id="sendBtn">Send</button>
+
+    <div>
+        <ol id="rec-messages">
+
+        </ol>
+    </div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+        const btn = document.getElementById("sendBtn");
+        const msgInput = document.getElementById("message");
+        const showmsgs = document.getElementById("rec-messages");
+
+        socket.on("message", (message) => {
+            const list = document.createElement("li");
+            list.innerHTML = message;
+            showmsgs.appendChild(list);
+        })
+
+        btn.addEventListener("click", (e)=>{
+            const message = msgInput.value;
+            console.log(message);
+            // emit -> emit it or send it
+            // by which name it should be emitted
+
+            socket.emit('User-Message', message);
+        });
+    </script>
   </body>
 </html>
